@@ -250,8 +250,8 @@
       \code{c()} and \code{unlist()} now works, thanks to Suharto
       Anggono's patch proposals in \PR{17992}.
 
-      \item Resource leaks reported by Steve Grubb fixed.  (\PR{17317},
-      \PR{17320})
+      \item Resource leaks (and similar) reported by Steve Grubb fixed.
+      (\PR{17314}, \PR{17316}, \PR{17317}, \PR{17318}, \PR{17319}, \PR{17320})
 
       \item \code{model.matrix(~1, mf)} now gets the row names from
       \code{mf} also when they differ from \code{1:nrow(mf)}, fixing
@@ -259,6 +259,13 @@
 
       \item \code{sigma(fm)} now takes the correct denominator degrees
       of freedom for a fitted model with \code{NA} coefficients.  (\PR{17313})
+
+      \item \code{hist(x, "FD")} no longer \dQuote{dies} with a somewhat
+      cryptic error message when \code{x} has extreme outliers or
+      \code{IQR()} zero:  \code{nclass.FD(x)} tries harder to find a
+      robust bin width \eqn{h} in the latter case, and
+      \code{hist.default(*, breaks)} now checks and corrects a too large
+      \code{breaks} number.  (\PR{17274})
     }
   }
 }
